app/styles/main.scss
/* ... */
.btn-options {
  @include icon($fa-var-gear);
  display: inline;
}

.navbar-options {
  @extend .navbar-brand;
  padding-right: 0px;
}

.btn-options:hover {
  text-decoration: none;
}

.tooltip-chart {
  &.in {
    opacity: 1;
  }

  .tooltip-inner {
    max-width: 400px;
    padding: 0;
    width: 400px;
  }
}

.panel-units {
  .panel-body {
    overflow-y: hidden;
    position: relative;
  }
}

.fix-height {
  height: 768px;
  overflow: hidden;
  padding-bottom: 0;
  margin-bottom: 0;
  padding-top: $navbar-height+$grid-gutter-width / 3;

  .container, .container-fluid {
    height: 100%;
    width: 100%;
    max-width: 1160px;

    .panel, .clicker {
      margin-bottom: $grid-gutter-width / 3;
    }

    topbar {
      .navbar.navbar-default {
        @extend .navbar-fixed-top;
      }
    }

    tutorial {
      .alert {
        position: fixed;
        z-index: 100;
        right: 10px;
        max-height: none;
        height: auto;
        width: 150px;
        overflow-y: visible;
        border-radius: 4px;
      }
    }

    @media (min-width: $screen-md-min) {
      .panel-units {
        .panel-body {
          padding-bottom: 0;
          padding-top: 0;
          max-height: $panel-body-height*3/2 - 2*$panel-body-padding - 29px;

          ul {
            margin: 0;
            padding: 0;
            li {
              .well {
                margin-top: $panel-body-padding/2;
                margin-bottom: $panel-body-padding/2;
              }
            }
          }
        }
        &.panel-cars .panel-body {
          max-height: $panel-body-height - 4*$panel-body-padding + 9px;
        }
        &.panel-other {
          .panel-heading {
            padding: $panel-body-padding/2 + 1px;
            padding-bottom: $panel-body-padding/2 + 1px;
          }
        }
      }

      .clicker {
        height: $panel-body-height + $line-height-computed*2 - $panel-body-padding*3 + 2px + $padding-base-vertical + 7px - $panel-body-padding/2;
      }
    }

    .panel-technology, .panel-cars {
      .panel-heading {
        padding-top: $panel-body-padding/2+$padding-base-vertical+2px;
        padding-bottom: $panel-body-padding/2+$padding-base-vertical+2px;
      }
    }
  }
}

// redesign
.clicker {
  background-color: $panel-default-heading-bg;
}

.scroller {
    height: $panel-body-height;
    overflow-y: hidden;
    position: relative;
}

